--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 services:
   app:
-    container_name: full_app
+    container_name: app_container
     build: .
     ports: 
       - 8080:8080 
@@ -16,7 +16,7 @@ services:
 
   fullstack-postgres:
     image: postgres:latest
-    container_name: full_db_postgres
+    container_name: postgres_container
     env_file:
       - .env
     environment:
